[package]
name = "imager"
version = "0.1.0"
edition = "2021"

[lib]
name = "imager"
path = "src/lib.rs"

[[bin]]
name = "draw"
path = "src/bin/draw.rs"

[[bin]]
name = "example"
path = "src/bin/example.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
